--- a/Naive Bayes' Algorithm.ipynb
+++ b/Naive Bayes' Algorithm.ipynb
@@ -5,6 +5,9 @@
    "id": "4d85e2b3-de9d-4c7d-8ff1-d32b82b5f108",
    "metadata": {},
    "source": [
+    "## MACHINE LEARNING ACTIVITY 10\n",
+    "\n",
+    "**Determine whether the new object with features (color:Red, Size:Small, Texture:Rough, Weight:Light) is an apple. Show all the steps that made you to arrive to the final answer.**\n",
     "# Step 1: Calculate Prior probability\n",
     "\n",
     "    P(Apple = Yes) = Number of Yes in Apple / Total instances\n",
@@ -81,7 +84,7 @@
     "\n",
     "# Step 5: Provide the probability answer\n",
     "\t\n",
-    "   The probability of the new object being an apple having features including color = red, size = small, texture = rough, and weight = light, is 1         whereas the probability of the new object not being an apple having the exact features is 0, therefore the new object is likely to be an apple          since 1 > 0.\n",
+    "   The probability of the new object being an apple having features including color = red, size = small, texture = rough, and weight = light, is 1         whereas the probability of the new object not being an apple having the exact features is 0, therefore the new object is an apple since 1 > 0.\n",
     "\n"
    ]
   },
